--- a/fe/package.json
+++ b/fe/package.json
@@ -12,14 +12,19 @@
     ]
   },
   "dependencies": {
+    "@radix-ui/react-slot": "^1.1.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
     "lodash": "^4.17.21",
+    "lucide-react": "^0.436.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-scripts": "5.0.1",
     "recharts": "^2.12.7",
+    "tailwind-merge": "^2.5.2",
     "tailwindcss": "^3.4.10",
     "web-vitals": "^2.1.4"
   },
