--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,8 @@
     "chart.js": "^4.4.4",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "d3-selection": "^3.0.0",
+    "d3-zoom": "^3.0.0",
     "date-fns": "^3.6.0",
     "lucide-react": "^0.436.0",
     "react": "^18.3.1",
