--- a/requirements.txt
+++ b/requirements.txt
@@ -1,108 +1,39 @@
-absl-py==2.1.0
 aiosqlite==0.20.0
-alembic==1.13.2
 annotated-types==0.7.0
-anyio==4.4.0
-appdirs==1.4.4
-astunparse==1.6.3
+anyio==4.6.2.post1
 beautifulsoup4==4.12.3
-charset-normalizer==3.3.2
+certifi==2024.8.30
+charset-normalizer==3.4.0
 click==8.1.7
-cloudpickle==3.0.0
-cmdstanpy==1.2.4
-colorlog==6.8.2
-contourpy==1.3.0
-cycler==0.12.1
 databases==0.9.0
-exceptiongroup==1.2.2
-fastapi==0.112.2
-filelock==3.15.4
-flatbuffers==24.3.25
-fonttools==4.53.1
-frozendict==2.4.4
-fsspec==2024.6.1
-gast==0.6.0
-google-pasta==0.2.0
-greenlet==3.1.0
-grpcio==1.66.1
+fakeredis==2.25.1
+fastapi==0.115.2
+frozendict==2.4.6
 h11==0.14.0
-h5py==3.11.0
-holidays==0.55
 html5lib==1.1
 idna==3.10
-importlib_resources==6.4.4
-Jinja2==3.1.4
-joblib==1.4.2
-keras==3.5.0
-kiwisolver==1.4.5
-libclang==18.1.1
-lightgbm==4.5.0
-llvmlite==0.43.0
 lxml==5.3.0
-Markdown==3.7
-markdown-it-py==3.0.0
-MarkupSafe==2.1.5
-matplotlib==3.8.3
-mdurl==0.1.2
-ml-dtypes==0.4.0
-mpmath==1.3.0
 multitasking==0.0.11
-namex==0.0.8
-networkx==3.3
-numba==0.60.0
-numpy==1.26.4
-nvidia-cublas-cu12==12.1.3.1
-nvidia-cuda-cupti-cu12==12.1.105
-nvidia-cuda-nvrtc-cu12==12.1.105
-nvidia-cuda-runtime-cu12==12.1.105
-nvidia-cudnn-cu12==8.9.2.26
-nvidia-cufft-cu12==11.0.2.54
-nvidia-curand-cu12==10.3.2.106
-nvidia-cusolver-cu12==11.4.5.107
-nvidia-cusparse-cu12==12.1.0.106
-nvidia-nccl-cu12==2.20.5
-nvidia-nvjitlink-cu12==12.6.68
-nvidia-nvtx-cu12==12.1.105
-opt-einsum==3.3.0
-optree==0.12.1
-optuna==3.6.1
-packaging==24.1
-pandas==2.2.1
-peewee==3.17.6
-prophet==1.1.5
-protobuf==4.25.4
-pydantic==2.8.2
-pydantic_core==2.20.1
-Pygments==2.18.0
+numpy==2.1.2
+pandas==2.2.3
+peewee==3.17.7
+platformdirs==4.3.6
+pydantic==2.9.2
+pydantic_core==2.23.4
 python-dateutil==2.9.0.post0
-pytz==2024.1
+pytz==2024.2
+redis==5.1.1
 requests==2.32.3
-rich==13.8.0
-scikit-learn==1.4.1.post1
-scipy==1.14.1
-shap==0.45.1
-slicer==0.0.8
+six==1.16.0
 sniffio==1.3.1
+sortedcontainers==2.4.0
 soupsieve==2.6
-SQLAlchemy==2.0.32
-stanio==0.5.1
-starlette==0.38.2
-sympy==1.13.2
+SQLAlchemy==2.0.36
+starlette==0.40.0
 ta==0.11.0
-tensorboard==2.17.1
-tensorboard-data-server==0.7.2
-tensorflow==2.17.0
-tensorflow-io-gcs-filesystem==0.37.1
-termcolor==2.4.0
-threadpoolctl==3.5.0
-torch==2.3.0
-tqdm==4.66.5
-triton==2.3.0
 typing_extensions==4.12.2
-tzdata==2024.1
-uvicorn==0.30.6
+tzdata==2024.2
+urllib3==2.2.3
+uvicorn==0.32.0
 webencodings==0.5.1
-Werkzeug==3.0.4
-wrapt==1.16.0
-xgboost==2.0.3
-yfinance==0.2.38
+yfinance==0.2.44
